--- a/gokafkacv/Dockerfile
+++ b/gokafkacv/Dockerfile
@@ -1,58 +1,39 @@
-FROM adaickalavan/gokafka as build-stage
+FROM adaickalavan/gocv-alpine:4.0.0-buildstage as build-stage
 
 #Author label
 LABEL Author Adaickalavan Meiyappan
 
-# Set build and dev tools
-ENV BUILD="ca-certificates \
-         git \
-         build-base \
-         musl-dev \
-         alpine-sdk \
-         make \
-         ffmpeg \
-         gcc \
-         g++ \
-         libc-dev \
-         linux-headers \
-         libjpeg-turbo \
-         libpng \
-         libwebp \
-         libwebp-dev \
-         tiff \
-         libavc1394 \
-         jasper-libs \
-         openblas \
-         libgphoto2 \
-         gstreamer \
-         gst-plugins-base"
 
-ENV DEV="clang clang-dev cmake pkgconf \
-         openblas-dev gstreamer-dev gst-plugins-base-dev \
-         libgphoto2-dev libjpeg-turbo-dev libpng-dev \
-         tiff-dev jasper-dev libavc1394-dev"
-
-# Install build and dev tools
-RUN apk update && \
-    apk add --no-cache ${BUILD} ${DEV}
-
-# Set environment variable paths
-ENV PKG_CONFIG_PATH /usr/local/lib64/pkgconfig
-ENV LD_LIBRARY_PATH /usr/local/lib64
-ENV CGO_CPPFLAGS -I/usr/local/include
-ENV CGO_CXXFLAGS "--std=c++1z"
-ENV CGO_LDFLAGS "-L/usr/local/lib -lopencv_core -lopencv_face -lopencv_videoio -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs -lopencv_objdetect -lopencv_features2d -lopencv_video -lopencv_dnn -lopencv_xfeatures2d -lopencv_plot -lopencv_tracking"
 
 #Install the GoCV package
 RUN go get -u -d gocv.io/x/gocv
 
-#Change the directory into the newly installed package directory
-WORKDIR $GOPATH/src/gocv.io/x/gocv
 
-# Quick install OpenCV 4.0.0 on Linux container
+
+#Install dev tools for building Librdkafka and confluent-kafka-go
+RUN apk add --update --no-cache alpine-sdk bash ca-certificates \
+      libressl \
+      tar \
+      git openssh openssl yajl-dev zlib-dev cyrus-sasl-dev openssl-dev build-base coreutils
+
+# Build librdkafka
+WORKDIR /root
+RUN git clone https://github.com/edenhill/librdkafka.git
+WORKDIR /root/librdkafka
+RUN /root/librdkafka/configure
+RUN make
 RUN make install
 
-#By enabling the ENTRYPOINT command below, running 
+# For golang applications
+RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
+
+# Get confluent-kafka-go/kafka library
+RUN go get -u github.com/confluentinc/confluent-kafka-go/kafka
+
+
+
+# To verify that the Docker image has been built correctly, do the following.
+# By enabling the ENTRYPOINT command below, running 
 # ```
 # docker run <image_name>
 # ```
@@ -65,4 +46,4 @@ RUN make install
 # ```
 
 # Run the app command by default when the container starts
-# ENTRYPOINT ["go", "run", "./cmd/version/main.go"]
+# ENTRYPOINT ["go", "run", "$GOPATH/src/gocv.io/x/gocv/cmd/version/main.go"]
