--- a/gokafka-debian/Dockerfile
+++ b/gokafka-debian/Dockerfile
@@ -1,15 +1,5 @@
-FROM adaickalavan/gocv-debian
+FROM golang:latest
 
-#Author label
-LABEL Author Adaickalavan Meiyappan
-
-
-
-#Install the GoCV package
-RUN go get -u -d gocv.io/x/gocv
-
-
-#Set environment variable for librdkafka
 ENV LIBRDKAFKA_VERSION 1.0.0
 
 #Install dev tools
@@ -26,21 +16,3 @@ RUN curl -Lk -o /root/librdkafka-${LIBRDKAFKA_VERSION}.tar.gz https://github.com
 
 # Get confluent-kafka-go/kafka library
 RUN go get -u github.com/confluentinc/confluent-kafka-go/kafka
-
-
-
-# To verify that the Docker image has been built correctly, do the following.
-# By enabling the ENTRYPOINT command below, running 
-# ```
-# docker run <image_name>
-# ```
-#
-# should print the following message:
-#
-# ```
-#gocv version: 0.18.0
-#opencv lib version 4.0.0
-# ```
-
-# Run the app command by default when the container starts
-# ENTRYPOINT ["go", "run", "$GOPATH/src/gocv.io/x/gocv/cmd/version/main.go"]
